--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                     sum=a+b;
                 }</pre>
             
-                <a href="http://google.com/">Go to google</a>
+                <!-- <a href="http://google.com/">Go to google</a>
                 <a href="author.html">about author</a>
-                <a href="">prep_bytes</a> -->
+                <a href="">prep_bytes</a> --> -->
                 <h3>The backtracking algorithm.</h3>
                 <p>Here is the algorithm (in pseudocode) for doing backtracking from a given node n:</p>
                 <pre><b>boolean solve(Node n) {
