--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
         
     </style> -->
     <link rel="stylesheet" href="external.css">
+    
    
 
 
 
 </head>
+<a href="./website.html"> Go to my webpage</a>
 <body>
     <form>
  <fieldset id="fieldset">
