--- a/website.html
+++ b/website.html
@@ -58,7 +58,14 @@
 
            </ul>
        </section>
-       <section></section>
+       <section id="section-c">
+           <div>
+               <h2>
+                   We handle all of your digital needs
+               </h2>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, sed autem sequi voluptate, repellendus nobis id aliquam quo perferendis molestiae aut provident. Fuga est enim eveniet doloremque incidunt dicta assumenda?</p>
+           </div>
+       </section>
        <section></section>
 
     </main>
